k8s/HML/deployment-withrole.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: PROJETO
    workload.user.cattle.io/workloadselector: apps.deployment-agapesistemas-ns-AMBIENTE-PROJETO
  name: PROJETO-dp-AMBIENTE
  namespace: agapesistemas-ns-AMBIENTE
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: apps.deployment-agapesistemas-ns-AMBIENTE-PROJETO
  template:
    metadata:
      labels:
        app: PROJETO
        workload.user.cattle.io/workloadselector: apps.deployment-agapesistemas-ns-AMBIENTE-PROJETO
      namespace: agapesistemas-ns-AMBIENTE
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - PROJETO
              topologyKey: kubernetes.io/hostname
      containers:
        - env:
            - name: TZ
              value: America/Maceio
          image: IMAGEM:TAG          
          name: PROJETO
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources:
            limits:
              memory: 857Mi
            requests:
              memory: 720Mi
      nodeSelector:
        doks.digitalocean.com/node-pool: pool-k8s-agapesistemas-app-AMBIENTE
      imagePullSecrets:
        - name: registry-agapesistemas
