k8s/HML/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: PROJETO
    workload.user.cattle.io/workloadselector: apps.deployment-agapesistemas-ns-AMBIENTE-PROJETO
  name: PROJETO-dp-AMBIENTE
  namespace: agapesistemas-ns-AMBIENTE
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: apps.deployment-agapesistemas-ns-AMBIENTE-PROJETO
  template:
    metadata:
      labels:
        app: PROJETO
        workload.user.cattle.io/workloadselector: apps.deployment-agapesistemas-ns-AMBIENTE-PROJETO
      namespace: agapesistemas-ns-AMBIENTE
    spec:
      containers:
        - env:
            - name: TZ
              value: America/Maceio
          image: IMAGEM:TAG
          name: PROJETO
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources:
            limits:
              memory: 1800Mi
            requests:
              memory: 1008Mi
      nodeSelector:
        doks.digitalocean.com/node-pool: pool-k8s-agapesistemas-app-AMBIENTE
      imagePullSecrets:
        - name: registry-agapesistemas
